--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,24 @@
-APP_NAME=Laravel
+APP_PORT=8081
+VITE_PORT=5177
+FORWARD_DB_PORT=3308
+
+APP_NAME="Eastern Enterprise"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:P30pT72t69edczYGxtfomT6IKm5XZ0w51ilTzuccl5Q=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:${APP_PORT}
+FORWARD_DB_PORT=3309
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql#localhost#
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=eastern
+DB_USERNAME=sherif
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
